EEC_InitBackup/src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_Length_feet__c</fullName>
        <label>Dimension - Length (feet)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_Square_Feet__c</fullName>
        <formula>Dimension_Length_feet__c  *  Dimension_Width_feet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension - Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_Width_feet__c</fullName>
        <label>Dimension - Width (feet)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Level__c</fullName>
        <label>Floor Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Source_Transaction__r.Provider__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Transaction__c</fullName>
        <label>Source Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <type>TextArea</type>
    </fields>
    <label>Rooms</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>